[build-system]
requires = ["uv_build>=0.9"]
build-backend = "uv_build"

[project]
name = "lfp-types"
version = "0.0.1"
description = "Lightweight runtime typing helpers for iterable and container normalization."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
license = { file = "LICENSE" }
keywords = ["typing", "helpers", "iterable", "container", "normalization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[dependency-groups]
dev = ["pytest", "ruff", "bumpversion"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = []

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64", "linux-aarch64", "win-64", "win-arm64"]

[tool.pixi.pypi-dependencies]
lfp-types = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default", features = ["dev"] }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
publish = { cmd = "git add . && (git diff --staged --quiet || git commit -m \"pre-release: staging changes\") && bumpversion {{ part }} --message \"{{ message }}\" && git push origin HEAD --tags", args = [{ arg = "part", default = "patch" }, { arg = "message", default = "incrementing version to {new_version}" }] }
